Fix bug: Hide sidenav on small screens

--- a/app/javascript/containers/Sidenav.module.css
+++ b/app/javascript/containers/Sidenav.module.css
@@ -10,11 +10,14 @@
   height: 90%;
 }
 
-.sidenav.open {
-  top: 5%;
-  width: 300px;
-  left: 0;
-  visibility: visible;
+
+@media (max-width: 768px) {
+  .sidenav.open {
+    top: 5%;
+    width: 300px;
+    left: 0;
+    visibility: visible;
+  }
 }
 
 .userInfo {
